<resources>
    <!--Titling-->
    <string name="app_name">Couch Potato</string>
    <string name="app_name_upper">COUCH POTATO</string>
    <string name="easter">COUCH BROTATO</string>
    <string name="version">v. 1.0.0</string>

    <!--Acceptable character sets-->
    <string name="chars_name">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ 0123456789.\'&quot;-</string>
    <string name="chars_response">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ 0123456789:;\'&quot;,.&lt;&gt;/\?~!@#$%&amp;*()-+=</string>

    <!--Globally used strings. Only add to if needed-->
    <string name="start">START</string>
    <string name="cancel">CANCEL</string>
    <string name="ok">OK</string>
    <string name="back">BACK</string>
    <string name="winner">WINNER!</string>
    <string name="p1">P1</string>
    <string name="p2">P2</string>
    <string name="p3">P3</string>
    <string name="p4">P4</string>
    <string name="p5">P5</string>
    <string name="p6">P6</string>
    <string name="p7">P7</string>
    <string name="p8">P8</string>
    <string name="round1">Round One</string>
    <string name="round2">Round Two</string>
    <string name="round3">Final Round</string>
    <string name="waitingH">Waiting on host...</string>
    <string name="waitingL">Setting up the game...</string>
    <string name="submit">SUBMIT</string>
    <string name="play_again">PLAY AGAIN</string>
    <string name="close_room">CLOSE ROOM</string>
    <string name="disconnect">DISCONNECT</string>

    <!--Activity-specific strings. Prefix with the name of the Activity-->
    <string name="title_name_field">enter your name</string>
    <string name="title_play">PLAY</string>
    <string name="title_sorry">To play Couch Potato, your device needs to be Bluetooth-ready. If we\'re wrong, let us know; we\'ll get to the bottom of it!</string>
    <string name="info_bar_title">GAME INFO</string>
    <string name="select_host">HOST A GAME</string>
    <string name="select_join">JOIN A GAME</string>
    <string name="select_info">HELP</string>
    <string name="setup_host1">Please wait for people to join your room...</string>
    <string name="setup_host2">Found enough players! Hit START when ready.</string>
    <string name="setup_host3">You\'ve got a full house! Tap START to begin.</string>
    <string name="setup_join1">Please wait as we search for nearby hosts...</string>
    <string name="setup_join2">Hosts found! Pick who you want to play with.</string>
    <string name="setup_join3">Joining! Waiting on the host to start...</string>
    <string name="setup_searching">Searching...</string>
    <string name="setup_joining">Joining...</string>
    <string name="kick_dialog">The host dropped you from the game you had joined.\nBecause of reasons.</string>
    <string name="settings_title">SETTINGS</string>
    <string name="settings_voice">VOICE VOLUME</string>
    <string name="settings_sfx">SFX VOLUME</string>

    <!--Placeholder text-->
    <string name="na_empty"> </string>
    <string name="na_value">N/A</string>
    <string name="na_name">username</string>
    <string name="na_score">+0000</string>
    <string name="na_device">Unknown device model</string>
    <string name="na_message">Loading...</string>
    <string name="na_filler">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tempor ultricies luctus. In at libero velit. Sed ultrices elit sit amet nulla mattis mattis. Curabitur ultrices justo ut elit iaculis cursus. Aenean a massa scelerisque tellus semper suscipit eu sed justo. Ut facilisis ac nulla sed ultrices. Donec imperdiet lectus vitae venenatis fringilla. Duis interdum ipsum nisi, a suscipit odio iaculis eget. Morbi ut risus vehicula, sollicitudin risus in, venenatis tortor. Donec ultrices lacinia consequat. Donec pretium aliquam velit, sit amet consequat ligula varius non.</string>

    <!--Game-specific strings-->
    <string name="wouldchuck_wyr">WOULD YOU RATHER...</string>
    <string name="wouldchuck_or">OR</string>
    <string name="wouldchuck_directions">Enter 2 things you\'d see on a \'Would You Rather\' question:</string>
    <string name="wouldchuck_results">RESULTS</string>
    <string name="wouldchuck_leaderboard">LEADERBOARD</string>
    
    <!--Text for InfoActivity-->
    <string name="info_wouldchuck">Welcome to Wouldchuck - the silliest game of \"Would You Rather\" on this side of the Universe!\n\n
The game is broken into three rounds, and each starts by asking you for two things you might see on a \"Would You Rather\" question. It can be anything from \"Be able to fly\" to \"Eat a bucket of squirming worms\" - keep in mind that they DON\'T need to be related to one another.\n\n
Once the time is up or everyone\'s submitted, that\'s when the real fun begins! We scramble up everyone\'s submissions, then remix them into brand new \"Would You Rather\" questions for everyone to vote on.\n\n
Throw down your vote honestly, or spend the rest of the time trying to influence your friend\'s votes, because at the end of the round the person with the LEAST votes get\'s the lions share of the available points. The bigger the difference in points, the more points you can win.\n\n
Finally, after all submissions have been used, the round ends, the ante is increased, and it starts all over again!\n\n
Think you can you out-bizarre your friends? Now you can prove it!</string>

</resources>
