<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/title_root"
    android:clickable="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_white"
    tools:context="paperprisoners.couchpotato.TitleActivity">

    <RelativeLayout
        android:id="@+id/title_adspace_reserved"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true" >
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignBottom="@+id/title_adspace_reserved"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="24dp"
        android:weightSum="100"
        >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="55"
            android:gravity="center"
            android:orientation="vertical">


            <!--android:src="@drawable/logo.png"-->
            <Button
                android:background="@drawable/logo_512"
                android:id="@+id/title_image"
                android:layout_width="@dimen/logo"
                android:layout_height="@dimen/logo" />

            <TextView
                android:id="@+id/title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:keepScreenOn="true"
                android:text="@string/app_name_upper"
                android:textColor="@color/main_black"
                android:textSize="@dimen/font_xlarge"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/title_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version"
                android:textSize="@dimen/font_small"
                android:textColor="@color/main_black_faded"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="45"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <!--android:src="@drawable/logo.png"-->
            <EditText
                android:id="@+id/title_name_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="@string/chars_name"
                android:hint="@string/title_name_field"
                android:inputType="text"
                android:maxLength="15"
                android:textAlignment="center"
                android:textColor="@color/main_black"
                android:textSize="@dimen/font_medium" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/padding_small" />
            <Button
                android:id="@+id/title_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/main_neutral"
                android:gravity="center"
                android:keepScreenOn="true"
                android:text="@string/title_play"
                android:textColor="@color/main_black_superfaded"
                android:textSize="@dimen/font_medium"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
