<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/select_background_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/wouldchuck"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="paperprisoners.couchpotato.GameSelectActivity">

    <RelativeLayout
        android:id="@+id/select_top_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_medium"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:background="@color/main_black">

        <Button
            android:id="@+id/select_back"
            android:layout_width="@dimen/size_medium"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:background="@drawable/ic_back_white_48dp"
            android:backgroundTint="@color/main_white" />

        <Button
            android:id="@+id/select_info"
            android:layout_width="@dimen/size_medium"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@drawable/ic_help_white_48dp"
            android:backgroundTint="@color/main_white" />

        <TextView
            android:id="@+id/select_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toLeftOf="@id/select_info"
            android:layout_toRightOf="@id/select_back"
            android:gravity="center"
            android:padding="4dp"
            android:lines="1"
            android:ellipsize="end"
            android:text="@string/na_name"
            android:textColor="@color/main_white"
            android:textSize="@dimen/font_large"
            android:textStyle="bold" />

    </RelativeLayout>

    <fragment
        android:id="@+id/select_pager"
        android:name="paperprisoners.couchpotato.PagedFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/select_game_start"
        android:layout_below="@+id/select_top_bar"
        tools:layout="@layout/fragment_pager" />

    <LinearLayout
        android:id="@+id/select_game_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="@dimen/padding_small"
        android:paddingBottom="@dimen/padding_large"
        android:paddingLeft="@dimen/size_medium"
        android:paddingRight="@dimen/size_medium">

        <Button
            android:id="@+id/select_host"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/main_black"
            android:text="@string/select_host"
            android:textColor="@color/main_white"
            android:textSize="@dimen/font_medium"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/padding_large" />

        <Button
            android:id="@+id/select_join"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/main_black"
            android:text="@string/select_join"
            android:textColor="@color/main_white"
            android:textSize="@dimen/font_medium"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>
